# kraken-unleashed

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml
backend-rust/: Cargo.toml
backend-rust/src/: gif_prepare.rs  main.rs  windows_native.rs
docs/: index.html  privacy.html  styles.css
frontend-electron/: app-config.js  index.html  main.js  preload.js  renderer.js  styles.css
scripts/: prepare-dist-resources.js  upload-virustotal.js
site/: styles.css
