[package]
name = "kraken-unleashed-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Devices_Usb",
  "Win32_Foundation",
  "Win32_Graphics_Imaging",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading"
] }
